--- a/hoon/hoon.html
+++ b/hoon/hoon.html
@@ -37,27 +37,35 @@
       With that you can buy:
       <div class="slideshow-container">
         <div class="slide fade">
-          <div class="numbertext" id="mcChicken"></div>
-          <img src="../assets/hoon/mc-chicken.jpeg" style="width: 100%" />
-          <div class="text">Medium McChicken Combos</div>
+          <img src="../assets/hoon/mc-chicken.jpeg" />
+          <div class="text">
+            <div class="numbertext" id="mcChicken"></div>
+            Medium McChicken Combos
+          </div>
         </div>
 
         <div class="slide fade">
-          <div class="numbertext" id="powerade"></div>
-          <img src="../assets/hoon/powerade.avif" style="width: 100%" />
-          <div class="text">Powerades</div>
+          <img src="../assets/hoon/powerade.avif" />
+          <div class="text">
+            <div class="numbertext" id="powerade"></div>
+            Powerades
+          </div>
         </div>
 
         <div class="slide fade">
-          <div class="numbertext" id="goats"></div>
-          <img src="../assets/hoon/goats.jpeg" style="width: 100%" />
-          <div class="text">Goats</div>
+          <img src="../assets/hoon/goats.jpeg" />
+          <div class="text">
+            <div class="numbertext" id="goats"></div>
+            Goats
+          </div>
         </div>
 
         <div class="slide fade">
-          <div class="numbertext" id="raffello"></div>
-          <img src="../assets/hoon/raffello.jpeg" style="width: 100%" />
-          <div class="text">Raffello Chocolates</div>
+          <img src="../assets/hoon/raffello.jpeg" />
+          <div class="text">
+            <div class="numbertext" id="raffello"></div>
+            Raffello Chocolates
+          </div>
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">❮</a>
