--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -214,6 +214,22 @@
           />
         </div>
       </div>
+      <div class="item">
+        <h1>We Met Batman!!!</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-15.png"
+            alt="canvas-15"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-9.jpg"
+            alt="real-9"
+            class="real"
+            style="display: none"
+          />
+        </div>
+      </div>
       <button id="next">></button>
       <button id="prev"><</button>
     </div>
