--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -223,7 +223,7 @@
             class="canvas"
           />
           <img
-            src="../assets/gallery/real-9.jpg"
+            src="../assets/gallery/real-9.JPG"
             alt="real-9"
             class="real"
             style="display: none"
