--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -8,19 +8,14 @@
     <link rel="stylesheet" href="gallery.css" />
   </head>
   <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L0LGFP1LDF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag("config", "G-97C72DF7RV");
-  </script>
+  gtag('config', 'G-L0LGFP1LDF');
+</script>
   <body>
     <div class="back">
       <a href="../index.html">← Back to Pivvy's Pebsite</a>
@@ -225,6 +220,22 @@
           <img
             src="../assets/gallery/real-9.JPG"
             alt="real-9"
+            class="real"
+            style="display: none"
+          />
+        </div>
+      </div>
+      <div class="item">
+        <h1>He Juicy</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-16.png"
+            alt="canvas-16"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-10.jpeg"
+            alt="real-10"
             class="real"
             style="display: none"
           />
