--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Alatsi&display=swap" rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L0LGFP1LDF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-97C72DF7RV');
+  gtag('config', 'G-L0LGFP1LDF');
 </script>
 <body>
   <div id="text">
