--- a/catch/catch.html
+++ b/catch/catch.html
@@ -9,7 +9,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
+    src="https://www.googletagmanager.com/gtag/js?id=G-L0LGFP1LDF"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -18,7 +18,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-97C72DF7RV");
+    gtag("config", "G-L0LGFP1LDF");
   </script>
   <body>
     <div class="back">
