--- a/dino/dino.html
+++ b/dino/dino.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="dino.css" />
   </head>
   <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L0LGFP1LDF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag("config", "G-97C72DF7RV");
-  </script>
+  gtag('config', 'G-L0LGFP1LDF');
+</script>
   <body>
     <div class="back">
       <a href="../index.html">← Back to Pivvy's Pebsite</a>
