--- a/hoon/hoon.html
+++ b/hoon/hoon.html
@@ -9,7 +9,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
+    src="https://www.googletagmanager.com/gtag/js?id=G-L0LGFP1LDF"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -18,7 +18,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-97C72DF7RV");
+    gtag("config", "G-L0LGFP1LDF");
   </script>
   <body>
     <div class="back">
@@ -26,7 +26,9 @@
     </div>
     <div class="timeSince">
       <h1>Days since last hoon:</h1>
-      <span id="time"></span>
+      <p id="time"></p>
+      <br />
+      <button onclick="setNewDate()">Reset</button>
     </div>
     <div class="moneySaved">
       <h1>
@@ -80,6 +82,43 @@
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
     </div>
+    <script src="hoon.js"></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+      import {
+        collection,
+        getDocs,
+      } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCQY2eP49dyieMxs208O2vW1C0bnhhQ8Xc",
+        authDomain: "pivvy-47a57.firebaseapp.com",
+        projectId: "pivvy-47a57",
+        storageBucket: "pivvy-47a57.appspot.com",
+        messagingSenderId: "673450422172",
+        appId: "1:673450422172:web:e47d7ba372247def626259",
+        measurementId: "G-26CHLF3Z36",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const db = getFirestore(app);
+
+      const docRef = collection(db, "hoon")
+        .getDocs()
+        .then((querySnapshot) => {
+          querySnapshot.forEach((doc) => {
+            console.log(`${doc.id} => ${doc.data()}`);
+          });
+        });
+    </script>
   </body>
-  <script src="hoon.js"></script>
 </html>
